# FezOverlay

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.cjs  server.js  settings.json  update.js  updater.cjs  updater.js  vite.config.js
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: AuthCallback.jsx  index.css  main.jsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  http_server.rs  lib.rs  main.rs
src/commands/: customcommands.js  exclude.js  leaderboard.js  ping.js  refresh.js  version.js
src/components/: BattleOverlay.jsx  ChatCommands.jsx  ChatOverlay.jsx  EmoteOverlay.jsx  EmoteOverlayBucket.jsx  Fih.jsx  MusicOverlay.jsx  NowPlaying.jsx  POEDeathCounter.jsx  Settings.jsx  YapMeter.jsx  YoutubePlayer.jsx
src/components/Settings/: BattleSettings.jsx  ChatOverlaySettings.jsx  CommandSettings.jsx  EmoteOverlaySettings.jsx  LeaderboardSettings.jsx  POEDeathCounterSettings.jsx  Settings.jsx  SongOverlaySettings.jsx  YapMeterSettings.jsx
src/hooks/: useBattleSystem.jsx  useCommandsSystem.jsx  useDPSTracker.jsx  useEmoteLifecycle.jsx  useEmoteLoader.jsx  useEmoteSpawner.jsx  useGlobalEffects.jsx  useMessageHandler.jsx  useMetadata.jsx  usePhysicsEngine.jsx  useRaidHandler.jsx  useSubscriberTracker.jsx  useTwitchClient.jsx
src/skills/: bananaBomb.js  cyclone.js  heal.js  index.js  judgmentCut.js  kamehameha.js  lightning.js  omaewamou.js  shield.js  shinraTensei.js
src/utils/: emoteEffects.js  errorLogger.js  index.js  youtube.js
(+4 files in other folders)
