[package]
name = "fezoverlay"
version = "1.0.11"
description = "FezOverlay - Tauri Backend"
authors = ["Fezalion"]
license = ""
repository = "https://github.com/Fezalion/FezOverlay"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[features]
devtools = ["tauri/devtools"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "devtools"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dotenvy = "0.15"
futures-util = "0.3"
tokio-tungstenite = "0.21"
regex = "1"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
env_logger = "0.11"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console"] }
